--- a/Fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeios-passos-em-css/Para Fixar/index.html
+++ b/Fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeios-passos-em-css/Para Fixar/index.html
@@ -14,7 +14,7 @@
         }
 
         .cor-de-fundo {
-            background-color: aqua;
+            background-color: blueviolet;
         };
 
     </style>
