--- a/Fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeios-passos-em-css/Para Fixar2/index2.html
+++ b/Fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeios-passos-em-css/Para Fixar2/index2.html
@@ -3,47 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
-    <style>
-        h1 {
-            font-size: 65px;
-            color: orange;
-            font-family: sans-serif
-        };
-
-        ul {
-            background-color: blueviolet;
-        };
-
-        p {
-            font-weight: 600;
-            font-size: 3em;
-        };
-
-        body {
-            font-size: 16px;
-        }
-
-        li {
-            font-style: italic;
-            line-height: 30px;
-            text-align: right;
-            text-decoration: line-through;
-        }
-
-        #amarelo {
-            background-color: yellow;
-        }
-
-        #vermelho {
-            background-color: red;
-        }
-
-        #marrom {
-            background-color: brown;
-        }
-
-
-    </style>
+    <link rel="stylesheet" href="style2.css">
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
