--- a/Fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/Para-Fixar/Hackathon-Results/Index.html
+++ b/Fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/Para-Fixar/Hackathon-Results/Index.html
@@ -16,7 +16,7 @@
         text-align: center;
         width: 200px;
         display: block;
-        margin-left: 200px;
+        margin-left: 550px;
       }
 
       .second {
@@ -26,6 +26,7 @@
         text-align: center;
         width: 300px;
         display: inline-block;
+        
       }
 
       .third {
@@ -42,6 +43,10 @@
       }
 
       h3 {
+        text-align: center;
+      }
+
+      ul {
         text-align: center;
       }
 
